<resources>
    <string name="app_name">Suomen eduskunta</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="desc_party_member_image">Party member image</string>
    <string name="first_name">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="alku_text">Alku</string>
    <string name="puolueet_text">Puolueet</string>
    <string name="suosikit_text">Suosikit</string>
    <string name="satunnainen_text">Satunnainen</string>
    <string name="paivita_tietokanta_text">Päivitä tietokanta</string>
    <string name="aanesi_ratkaisee_text">Sinun äänesi ratkaisee!</string>
    <string name="member_full_name_text" />
    <string name="sanna_marin_text">Sanna Marin</string>
    <string name="paaministeri_text">Pääministeri</string>
    <string name="member_image_text" />
    <string name="ssd_text">Suomen Sosiaalidemokraatit</string>
    <string name="text_sanna">Sanna</string>
    <string name="text_marin">Marin</string>
    <string name="palautteet_text">Palautteet</string>
    <string name="tykkaa_text">Tykkää</string>
    <string name="member_likes_counter_text">21</string>
    <string name="lorem_ipsum_long">Sit amet conse ctetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="comment_footer">22.3.2021</string>
    <string name="user_name">Fuad Kalhori</string>
    <string name="jata_palaute_text">Jätä palaute</string>
    <string name="plaute_max_size">Max. 100 merkkiä</string>
    <string name="party_logo_desc">puolueen logo</string>
    <string name="button_for_opening_comment_box">button for opening comment box</string>
    <string name="eduskunta_logo">Suomen eduskunnan logo</string>
    <string name="home_net_info">Sovellus ei toimi oikein ilman internet-yhteyttä!</string>
</resources>